# cpp_binaryIO_parser

./: .clangd  .gitignore  README.md  compile_commands.json  meson.build
include/: Parse.hpp  SFOCInterface.hpp  SimpleFOCRegisters.hpp  ThreadSafeQueue.hpp  meson.build
src/: Parse.cpp  SFOCInterface.cpp  SimpleFOCRegisters.cpp  binary_parse.cpp  gui.cpp  main.cpp  meson.build  pylib.cpp  serial_parser.cpp
